Tidying p1 (#3)
Tidying up code base,
Adding docker builds
Prep work for linters
